# rlt

./: .env.example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  tea.yaml
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml  release.yaml  test.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
client/: Cargo.toml  README.md
client/src/: lib.rs
client/tests/: reregistration.rs
docs/: proxy-service.md
mock-server/: http-server.js  index.html  package-lock.json  package.json  websocket-server.js
server/: Cargo.toml
server/src/: api.rs  auth.rs  config.rs  error.rs  lib.rs  proxy.rs  state.rs
