[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/kaichaosun/rlt"

members = ["cli", "client", "server"]

[workspace.dependencies]
tokio = { version = "1.23.0", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
