[workspace]
members = ["cli", "client", "server"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/kaichaosun/rlt"

[workspace.dependencies]
tokio = { version = "1.23.0", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
