[workspace]
members = ["cli", "client", "server"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/kaichaosun/rlt"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
socket2 = "0.5"
