[package]
name = "localtunnel"
version = "0.0.11"
edition = "2021"
description = "A CLI to proxy with localtunnel server."
license = "MIT"
repository = "https://github.com/kaichaosun/rlt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
localtunnel-client = { path = "../client", version = "0.0.12" }
localtunnel-server = { path = "../server", version = "0.0.2" }
tokio = { version = "1.23.0", features = ["full"] }
log = "0.4"
env_logger = "0.9"
anyhow = { version = "1.0", features = ["backtrace"] }
