[package]
name = "localtunnel"
version = "0.1.2"
edition.workspace = true
description = "A CLI to proxy with localtunnel server."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.14", features = ["derive"] }
localtunnel-client = { path = "../client" }
localtunnel-server = { path = "../server" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.9"
anyhow = { workspace = true }
