[package]
name = "localtunnel-client"
version.workspace = true
edition.workspace = true
description = "A client to connect with localtunnel server."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { workspace = true, default-features = false }
openssl = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }

[features]
default = ["reqwest/default"]
rustls-tls = ["reqwest/rustls-tls"]
