[package]
name = "localtunnel-client"
version = "0.1.6"
edition.workspace = true
description = "A client to connect with localtunnel server."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
socket2 = { workspace = true }

[features]
default = ["reqwest/default"]
rustls-tls = ["reqwest/rustls-tls"]
