[package]
name = "localtunnel-server"
version = "0.0.2"
edition = "2021"
description = "Server implementation of localtunnel."
license = "MIT"
repository = "https://github.com/kaichaosun/rlt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
lazy_static = "1.4.0"
envy = "0.4"
dotenv = "0.15.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.7.0"
