[package]
name = "localtunnel-server"
version.workspace = true
edition.workspace = true
description = "Server implementation of localtunnel."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
actix-web = "4"
serde = { workspace = true }
hyper = { version = "1.0.0-rc.1", features = ["full"] }
reqwest = { workspace = true, features = ["blocking"] }
openssl = { workspace = true }
lazy_static = "1.4.0"
envy = "0.4"
dotenv = "0.15.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.7.0"
