[package]
name = "localtunnel-server"
version = "0.1.3"
edition.workspace = true
description = "Server implementation of localtunnel."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
actix-web = "4"
serde = { workspace = true }
hyper = { version = "1.3", features = ["full"] }
hyper-util = "0.1"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "native-tls-vendored",
] }
lazy_static = "1.4.0"
envy = "0.4"
dotenv = "0.15.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.7.0"
socket2 = { workspace = true }
